Add bootloader dependency, configure custom target for `zach_os`, and render "Hello World!" to VGA buffer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,8 @@ edition = "2018"
 authors = ["Zacharie Côté <zacharie-cote@hotmail.ca>"]
 
 [dependencies]
-# Keep this empty or explicitly declare no_std-safe crates only
+bootloader = "0.9"
 
 [profile.dev]
-panic = "abort"        # disable unwinding in dev builds
 
 [profile.release]
-panic = "abort"        # disable unwinding in release builds
