--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ authors = ["Zacharie Côté <zacharie-cote@hotmail.ca>"]
 bootloader = "0.9"
 volatile = "0.2.6"
 
+[dependencies.lazy_static]
+version = "1.5.0"
+features = ["spin_no_std"]
+
 [profile.dev]
 
 [profile.release]
